--- a/cursos.html
+++ b/cursos.html
@@ -94,14 +94,14 @@
                     <div class="navbar-nav ms-auto">
                         <a href="index.html" class="nav-item nav-link active">Home</a>
                         <div class="nav-item dropdown">
-                            <a href="about.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">About</a>
+                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">About</a>
                             <div class="dropdown-menu rounded-0 m-0">
                                 <a href="arteintuitiva.html" class="dropdown-item">Arte Intuitiva</a>
                                 <a href="aboutme.html" class="dropdown-item">About me</a>
                             </div>
                         </div>
                         <div class="nav-item dropdown">
-                            <a href="" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Gallery</a>
+                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Gallery</a>
                             <div class="dropdown-menu rounded-0 m-0">
                                 <a href="aguarelas.html" class="dropdown-item">Aguarelas</a>
                                 <a href="aguarelas.html" class="dropdown-item">Telas</a>
@@ -109,9 +109,9 @@
                             </div>
                         </div>
                         <div class="nav-item dropdown">
-                            <a href="gallery.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Others</a>
+                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Others</a>
                             <div class="dropdown-menu rounded-0 m-0">
-                                <a href="" class="dropdown-item">E-books</a>
+                                <a href="#" class="dropdown-item">E-books</a>
                             </div>
                         </div>
                         <a href="cursos.html" class="nav-item nav-link active">Cursos</a>
@@ -120,6 +120,7 @@
             </nav>
         </div>
         <!-- Navbar End -->
+
 
         <!-- Watshap Start-->
         <img class="btn-whatsapp" src="img/flaticonwattshap.png" alt="whatsapp"
