--- a/aboutme.html
+++ b/aboutme.html
@@ -94,14 +94,14 @@
                     <div class="navbar-nav ms-auto">
                         <a href="index.html" class="nav-item nav-link active">Home</a>
                         <div class="nav-item dropdown">
-                            <a href="about.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">About</a>
+                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">About</a>
                             <div class="dropdown-menu rounded-0 m-0">
                                 <a href="arteintuitiva.html" class="dropdown-item">Arte Intuitiva</a>
                                 <a href="aboutme.html" class="dropdown-item">About me</a>
                             </div>
                         </div>
                         <div class="nav-item dropdown">
-                            <a href="" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Gallery</a>
+                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Gallery</a>
                             <div class="dropdown-menu rounded-0 m-0">
                                 <a href="aguarelas.html" class="dropdown-item">Aguarelas</a>
                                 <a href="aguarelas.html" class="dropdown-item">Telas</a>
@@ -109,9 +109,9 @@
                             </div>
                         </div>
                         <div class="nav-item dropdown">
-                            <a href="gallery.html" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Others</a>
+                            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Others</a>
                             <div class="dropdown-menu rounded-0 m-0">
-                                <a href="" class="dropdown-item">E-books</a>
+                                <a href="#" class="dropdown-item">E-books</a>
                             </div>
                         </div>
                         <a href="cursos.html" class="nav-item nav-link active">Cursos</a>
@@ -172,17 +172,14 @@
 
     <div class="container-xxl py-5">
         <div class="container">
-            <div class="row g-5 align-items-center">
-                <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
-                    <video width="320" height="240" controls>
-                        <source src="img/logoateliercolibri_animado.mp4" type="video/mp4">
-                        <source src="movie.ogg" type="video/ogg">
-                        Your browser does not support the video tag.
-                    </video>
+            <div class="text-justify mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 1200px;">
+                <div class="text-center">
+                    <img src="img/logo1.jpg" class="img-fluid" alt="#">
                 </div>
             </div>
         </div>
     </div>
+
     <!-- Arte intuitiva End -->
 
     <!-- Footer Start -->
