--- a/aboutme.html
+++ b/aboutme.html
@@ -174,7 +174,8 @@
         <div class="container">
             <div class="text-justify mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 1200px;">
                 <div class="text-center">
-                    <img src="img/logo1.jpg" class="img-fluid" alt="#">
+                    <img src="img/Logo Transparente.png" class="img-fluid" alt="Icon"
+                        style="width: 200pxf; height: 200px;">
                 </div>
             </div>
         </div>
