--- a/arteintuitiva.html
+++ b/arteintuitiva.html
@@ -275,7 +275,9 @@
                         <div class="d-flex pt-2">
                             <a class="btn btn-outline-light btn-social"
                                 href="https://www.instagram.com/atelier_colibri"><i class="fab fa-instagram"></i></a>
-                            <a class="btn btn-outline-light btn-social" href="mailto:artsoulcolibri@gmail.com"><i
+                                <a class="btn btn-outline-light btn-social"
+                                href="https://www.facebook.com/santiagocolibriolibri"><i class="fab fa-facebook"></i></a>
+                            <a class="btn btn-outline-light btn-social" href="#"ai><i
                                     class="fa fa-envelope"></i></a>
                         </div>
                     </div>
