--- a/cursos.html
+++ b/cursos.html
@@ -132,7 +132,6 @@
             <div class="container">
                 <div class="row g-5 align-items-center">
                     <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
-                        <div class="#">
                             <img class="img-fluid w-100" src="img/cursos_1.jpg">
                         </div>
                     </div>
@@ -185,10 +184,10 @@
                         <div class="d-flex pt-2">
                             <a class="btn btn-outline-light btn-social"
                                 href="https://www.instagram.com/atelier_colibri"><i class="fab fa-instagram"></i></a>
-                                <a class="btn btn-outline-light btn-social"
-                                href="https://www.facebook.com/santiagocolibriolibri"><i class="fab fa-facebook"></i></a>
-                            <a class="btn btn-outline-light btn-social" href="#"ai><i
-                                    class="fa fa-envelope"></i></a>
+                            <a class="btn btn-outline-light btn-social"
+                                href="https://www.facebook.com/santiagocolibriolibri"><i
+                                    class="fab fa-facebook"></i></a>
+                            <a class="btn btn-outline-light btn-social" href="#" ai><i class="fa fa-envelope"></i></a>
                         </div>
                     </div>
                 </div>
