--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Others</a>
                             <div class="dropdown-menu rounded-0 m-0">
-                                <a href="#" class="dropdown-item">E-books</a>
+                                <a href="ebook.html" class="dropdown-item">E-books</a>
                             </div>
                         </div>
                         <a href="cursos.html" class="nav-item nav-link active">Cursos</a>
