--- a/ebook.html
+++ b/ebook.html
@@ -131,7 +131,7 @@
         <div class="container-xxl py-5">
             <div class="container">
                 <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 900px;">
-                    <h1 class="mb-3">Mandalas para Colorir o Meo Jardin Interno</h1>
+                    <h1 class="mb-3">Mandalas para Colorir o Meu Jardin Interno</h1>
                     <p>18 Mandalas com 18 inspirações para inspirar a tua Alma.</p>
                     <p>inspiração • Relaxamento • Meditação • concentração Equilibrio • Paz • Tranquilidade, apenas
                         alguns dos benefícios que encontras na Pintura de
