--- a/ebook.html
+++ b/ebook.html
@@ -135,7 +135,8 @@
                     <p>18 Mandalas com 18 inspirações para inspirar a tua Alma.</p>
                     <p>inspiração • Relaxamento • Meditação • concentração Equilibrio • Paz • Tranquilidade, apenas
                         alguns dos benefícios que encontras na Pintura de
-                        Mandalas Em formato pdf</p>
+                        Mandalas.</p>
+                        <p>(formato pdf)</p>
                 </div>
                 <div class="row g-4">
                     <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
