--- a/ebook.html
+++ b/ebook.html
@@ -106,6 +106,7 @@
                                 <a href="aguarelas.html" class="dropdown-item">Aguarelas</a>
                                 <a href="aguarelas.html" class="dropdown-item">Telas</a>
                                 <a href="aguarelas.html" class="dropdown-item">Mandalas</a>
+                                <a href="aguarelas.html" class="dropdown-item">Impressões</a>
                             </div>
                         </div>
                         <div class="nav-item dropdown">
