--- a/impressões.html
+++ b/impressões.html
@@ -4,14 +4,14 @@
 <head>
     <!-- Meta Etiquetas Tittle Start -->
     <meta charset="utf-8">
-    <title>Art Soul Colibri</title>
+    <title> Art Soul Colibri</title>
     <!-- Meta Etiquetas Tittle End -->
 
     <!-- Meta Etiquetas Start -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="format-detection" content="telephone=no">
-    <meta content="Art Soul Colibri" name="keywords">
-    <meta content="Art Soul Colibri" name="description">
+    <meta content="Atelier Colibri" name="keywords">
+    <meta content="Atelier Colibri" name="description">
     <!-- Meta Etiquetas End -->
 
     <!-- Meta Etiquetas SEO start -->
@@ -122,67 +122,51 @@
         </div>
         <!-- Navbar End -->
 
-        <!-- Arte IntuitivaStart -->
+
+        <!-- Watshap Start-->
+        <img class="btn-whatsapp" src="img/flaticonwattshap.png" alt="whatsapp"
+            onclick="window.location.href='https://wa.me/351932857248?text=.!%20.%20.%20.%20.%20.'">
+        <!-- Watshap End  -->
+
+        <!-- Gallery Start -->
         <div class="container-xxl py-5">
             <div class="container">
-                <div class="text-justify mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 1200px;">
-                    <h1 class="text-center mb-3">Sobre mim e a Art Soul Colibri</h1>
-                    <p> Ana Santiago tenho 56 anos , Mãe , casada , e mãe bichiológica (tutora) de 2 cães e 2 gatos ,
-                        amo jardins flores e mares , ler , viajar e conhecer locais que me chamam , eterna estudiosa por
-                        tudo aquilo que sinto que me acrescenta e evolui ,sou formada academicamente pela ESAP ( Escola
-                        Superior Artística do Porto ) , com DESE em Publicidade e (MTC) Acupuntura Fitoterapia e
-                        Medicina Tradicional Chinesa pela UMC, CAP (actual CCP) , Reiki 3 desde 2004 e tantas outras
-                        Formações Holísticas assim como diversas formações sobre o estudo do Comportamento Humano.
-                    </p>
-                    <p>Sou a Criadora do Art Soul Colibri, em 2007 fundei o Atelier Colibri e desde 2017 comecei a
-                        sentir uma forte vontade de mudança e evolução pois para mim muitas coisas estavam a deixar de
-                        fazer sentido … e Hoje em Abril de 2025, trago á luz do Sol o Art Soul Colibri.
-                    </p>
-                    <p>O ‘Art Soul Colibri’ reflete uma conexão profunda com a arte, o autoconhecimento e a
-                        espiritualidade com essência e valores como Transparência, Empatia e Responsabilidade, levando
-                        desta forma até ti a minha Arte, e Autoconhecimento.
-                    </p>
-                    <p>Como seres espirituais a viver e experienciar uma vida terrena , acredito na conexão destas duas
-                        forças (Céu e Terra ) em nós, assim como na evolução e crescimento dia a dia , e ao longo desta
-                        maravilhosa caminhada.
-                    </p>
-                    <p>Se sempre é fácil? Pois , não acho , nem sempre a passadeira é feita de rosas lindas e frescas ,
-                        mas penso ser esse precisamente o Grande Professor o Desafio dos Desafios , as lições de
-                        aprendizagem que nos levam passo a passo , a um aprendizado e a níveis Superiores de Consciência
-                        e Evolução.
-                    </p>
-                    <p>Acredito que o Autoconhecimento é um Caminho que nos Reconecta com a nossa verdadeira e mais
-                        pura essência.
-                    </p>
-                    <p>
-                        Benvinda(o) a estas pinceladas de Cor e Expressão ,
-                    </p>
-                    <p>
-                        Benvinda(o) ao Art Soul Colibri
-                    </p>
-                    <p>
-                        Gratidão,
-                    </p>
-                    <p>
-                        Ana
-                    </p>
+                <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 900px;">
+                    <h1 class="mb-3">Impressões</h1>
+                    <p>Mão de Hamsá </p>
+                    <p>Símbolo de Proteção para afastar as energias negativas e atrair boas vibrações.</p>
+                    <p>Hamsá (cinco) alusivo aos 5 dedos da mão.</p>
+                    <p>Também conhecida por Mão de Fátima (Filha mais nova do profeta Maomé com sua esposa Cadija.
+                        como Mão de Miriam, para os judeus (Miriam, irmã de Moisés.
+                        Na tradição católica ficou conhecida como Mano Pentea ou Mão da Benção.</p>
+                    <p>O símbolo Hamsá também aparece no Hinduímo e no Budismo, com o nome de Abhaya Mudra, denominação
+                        de uma mudra (postura sagrada da mão).</p>
+                    <p>Conforme com com ou sem afastamento dos dedos têm um significado diferente. </p>
+                    <p>(‘Atrair Boa Sorte ou Afastar energias negativas e proteção)</p>
+                    <p>Impressão giclée com certificado de autenticidade. 30x30cm 29,00€ </p>
+                </div>
+                <div class="row g-4">
+                    <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                        <div class="team-item rounded overflow-hidden">
+                            <div class="position-relative">
+                                <img class="img-fluid" src="img/Impressões_1.jpg" alt="">
+                                <div
+                                    class="position-absolute start-50 top-100 translate-middle d-flex align-items-center">
+                                    <a class="btn btn-square mx-1" href="https://www.instagram.com/atelier_colibri"><i
+                                            class="fab fa-instagram"></i></a>
+                                </div>
+                            </div>
+                            <div class="text-center p-4 mt-3">
+                                <h5 class="fw-bold mb-0">Mandalas</h5>
+                                <small>Valor 7,40€</small>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-
-    <div class="container-xxl py-5">
-        <div class="container">
-            <div class="text-justify mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 1200px;">
-                <div class="text-center">
-                    <img src="img/Logo Transparente.png" class="img-fluid" alt="Icon"
-                        style="width: 200pxf; height: 200px;">
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- Arte intuitiva End -->
+    <!-- Gallery End -->
 
     <!-- Footer Start -->
     <div class="container-fluid bg-dark text-white-50 footer pt-1 mt-1 wow fadeIn" data-wow-delay="0.1s">
@@ -194,12 +178,11 @@
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+351 932857248</p>
                     <p class="mb-2"><i class="fa fa-fa fa-globe me-3"></i>artsoulcolibri.com</p>
                     <div class="d-flex pt-2">
+                        <a class="btn btn-outline-light btn-social" href="https://www.instagram.com/atelier_colibri"><i
+                                class="fab fa-instagram"></i></a>
                         <a class="btn btn-outline-light btn-social"
-                            href="https://www.instagram.com/atelier_colibri"><i class="fab fa-instagram"></i></a>
-                            <a class="btn btn-outline-light btn-social"
                             href="https://www.facebook.com/santiagocolibriolibri"><i class="fab fa-facebook"></i></a>
-                        <a class="btn btn-outline-light btn-social" href="#"ai><i
-                                class="fa fa-envelope"></i></a>
+                        <a class="btn btn-outline-light btn-social" href="#" ai><i class="fa fa-envelope"></i></a>
                     </div>
                 </div>
             </div>
@@ -219,18 +202,18 @@
 
     <!-- Back to Top -->
     <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
-</div>
+    </div>
 
-<!-- JavaScript Libraries -->
-<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-<script src="lib/wow/wow.min.js"></script>
-<script src="lib/easing/easing.min.js"></script>
-<script src="lib/waypoints/waypoints.min.js"></script>
-<script src="lib/owlcarousel/owl.carousel.min.js"></script>
+    <!-- JavaScript Libraries -->
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="lib/wow/wow.min.js"></script>
+    <script src="lib/easing/easing.min.js"></script>
+    <script src="lib/waypoints/waypoints.min.js"></script>
+    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
 
-<!-- Template Javascript -->
-<script src="js/main.js"></script>
+    <!-- Template Javascript -->
+    <script src="js/main.js"></script>
 </body>
 
 </html>
