--- a/ebook.html
+++ b/ebook.html
@@ -106,7 +106,7 @@
                                 <a href="aguarelas.html" class="dropdown-item">Aguarelas</a>
                                 <a href="aguarelas.html" class="dropdown-item">Telas</a>
                                 <a href="aguarelas.html" class="dropdown-item">Mandalas</a>
-                                <a href="aguarelas.html" class="dropdown-item">Impressões</a>
+                                <a href="impressões.html" class="dropdown-item">Impressões</a>
                             </div>
                         </div>
                         <div class="nav-item dropdown">
@@ -143,7 +143,7 @@
                     <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="team-item rounded overflow-hidden">
                             <div class="position-relative">
-                                <img class="img-fluid" src="img/img_ebook_1.jpg" alt="">
+                                <img class="img-fluid" src="img/ebook_1.jpg" alt="">
                                 <div
                                     class="position-absolute start-50 top-100 translate-middle d-flex align-items-center">
                                     <a class="btn btn-square mx-1" href="https://www.instagram.com/atelier_colibri"><i
