--- a/impressões.html
+++ b/impressões.html
@@ -143,7 +143,7 @@
                         de uma mudra (postura sagrada da mão).</p>
                     <p>Conforme com com ou sem afastamento dos dedos têm um significado diferente. </p>
                     <p>(‘Atrair Boa Sorte ou Afastar energias negativas e proteção)</p>
-                    <p>Impressão giclée com certificado de autenticidade. 30x30cm 29,00€ </p>
+                    <p>Impressão giclée com certificado de autenticidade. 30x30cm</p>
                 </div>
                 <div class="row g-4">
                     <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
@@ -157,8 +157,8 @@
                                 </div>
                             </div>
                             <div class="text-center p-4 mt-3">
-                                <h5 class="fw-bold mb-0">Mandalas</h5>
-                                <small>Valor 7,40€</small>
+                                <h5 class="fw-bold mb-0">impressões</h5>
+                                <small>Valor 29,00€</small>
                             </div>
                         </div>
                     </div>
