--- a/impressões.html
+++ b/impressões.html
@@ -141,7 +141,7 @@
                         Na tradição católica ficou conhecida como Mano Pentea ou Mão da Benção.</p>
                     <p>O símbolo Hamsá também aparece no Hinduímo e no Budismo, com o nome de Abhaya Mudra, denominação
                         de uma mudra (postura sagrada da mão).</p>
-                    <p>Conforme com com ou sem afastamento dos dedos têm um significado diferente. </p>
+                    <p>Conforme com ou sem afastamento dos dedos têm um significado diferente. </p>
                     <p>(‘Atrair Boa Sorte ou Afastar energias negativas e proteção)</p>
                     <p>Impressão giclée com certificado de autenticidade. 30x30cm</p>
                 </div>
@@ -150,6 +150,22 @@
                         <div class="team-item rounded overflow-hidden">
                             <div class="position-relative">
                                 <img class="img-fluid" src="img/Impressões_1.jpg" alt="">
+                                <div
+                                    class="position-absolute start-50 top-100 translate-middle d-flex align-items-center">
+                                    <a class="btn btn-square mx-1" href="https://www.instagram.com/atelier_colibri"><i
+                                            class="fab fa-instagram"></i></a>
+                                </div>
+                            </div>
+                            <div class="text-center p-4 mt-3">
+                                <h5 class="fw-bold mb-0">impressões</h5>
+                                <small>Valor 29,00€</small>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                        <div class="team-item rounded overflow-hidden">
+                            <div class="position-relative">
+                                <img class="img-fluid" src="img/Impressões_2.jpg" alt="">
                                 <div
                                     class="position-absolute start-50 top-100 translate-middle d-flex align-items-center">
                                     <a class="btn btn-square mx-1" href="https://www.instagram.com/atelier_colibri"><i
